# sem-8-page-segmentation

./: CMakeLists.txt  README.md
data/layout/: example10_1142.txt  example1_263.txt  example2_648.txt  example3_674.txt  example4_684.txt  example5_692.txt  example6_797.txt  example7_1107.txt  example8_1136.txt  example9_1205.txt
data/test/: example10_1142.txt  example1_263.txt  example2_648.txt  example3_674.txt  example4_684.txt  example5_692.txt  example6_797.txt  example7_1107.txt  example8_1136.txt  example9_1205.txt
data/xml/: example10_1142.xml  example1_263.xml  example2_648.xml  example3_674.xml  example4_684.xml  example5_692.xml  example6_797.xml  example7_1107.xml  example8_1136.xml  example9_1205.xml
doc/: doxygen.config
src/: CMakeLists.txt  CMakeLists.txt.bak  ccgraph.cpp  ccgraph.h  dsu.cpp  dsu.h  edge.cpp  edge.h  evaluation.cpp  evaluation.h  main_eval.cpp  main_eval.cpp.bak  main_parser.cpp  main_seg.cpp  page_segmentation.cpp  page_segmentation.h
